--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -55,6 +55,14 @@ body {
 	    and then override this based on the element id */
 	display: none;
 }
+
+.fullscrean {
+  padding: 0px;
+	/*  only one view is displayed at a time
+	    so we'll set the views to default to be un-displayed
+	    and then override this based on the element id */
+	display: none;
+}
 /* our three views */
 #welcome {
   display: block;  
